@startuml

title __FRAGMENTS's Class Diagram__\n

  namespace com.annushkaproject.programmerscalculator {
    namespace fragments {
      class com.annushkaproject.programmerscalculator.fragments.ProgrammerFragment {
          - dizit_tekst_viyu : TextView
          - ekuation_tekst_viyu : TextView
          - limit_dizits : int
          - limit_phen_dizits_recahed : boolean
          - packageName : String
          - secondValueInputStarted : boolean
          - u2b_tekst_viyu : TextView
          - u5h_tekst_viyu : TextView
          + onCreateView()
          + onSaveInstanceState()
          + onViewCreated()
          + setupFragment()
          - calculateResult()
          - currentString()
          - disableAllButtons()
          - disableOperatorButtons()
          - enableButtonsALL()
          - enableButtonsDEC()
          - enableOperatorButtons()
          - formatText()
          - setLetterButtonsClickable()
          - setNumberButtonsClickable()
          - setOperatorButtonsClickable()
          - setTextViewValue()
          - setupCalculateButton()
          - setupDeleteButton()
          - setupLetterButtons()
          - setupNumberButtons()
          - setupOperatorButtons()
          - setupSignButton()
          - setupWordLengthButton()
          - setup_decimal_spinner()
          - setup_heks_cb()
          - updateText()
          - useEqualsOperator()
          - usePressedNumber()
          - usePressedOperator()
      }
    }
  }
  

  namespace com.annushkaproject.programmerscalculator {
    namespace fragments {
      class com.annushkaproject.programmerscalculator.fragments.StandardFragment {
          - numberButtons : ArrayList<Button>
          - operatorButtons : ArrayList<Button>
          - packageName : String
          - secondValueInputStarted : boolean
          - textView : TextView
          + onCreateView()
          + onSaveInstanceState()
          + onViewCreated()
          + setupFragment()
          - calculateResult()
          - currentString()
          - fillNumberButtons()
          - fillOperatorButtons()
          - handleNotANumberCase()
          - isInLandscapeOrientation()
          - setupCalculateButton()
          - setupClearButton()
          - setupDeleteButton()
          - setupSignButton()
          - showDigitsLimitWarning()
          - updateText()
          - useEqualsOperator()
          - usePiPressedNumber()
          - usePressedNumber()
          - usePressedOperator()
      }
    }
  }
  

  namespace com.annushkaproject.programmerscalculator {
    namespace fragments {
      class com.annushkaproject.programmerscalculator.fragments.ThemesFragment {
          + onCreateView()
          + onViewCreated()
      }
    }
  }
  

  namespace com.annushkaproject.programmerscalculator {
    namespace fragments {
      class com.annushkaproject.programmerscalculator.fragments.c_handle_decimal_spinboks {
          + onItemSelected()
          + onNothingSelected()
      }
    }
  }
  

  namespace com.annushkaproject.programmerscalculator {
    namespace fragments {
      class com.annushkaproject.programmerscalculator.fragments.langs_fragment {
          + onCreateView()
          + onViewCreated()
      }
    }
  }
  

  com.annushkaproject.programmerscalculator.fragments.ProgrammerFragment -up-|> android.support.v4.app.Fragment
  com.annushkaproject.programmerscalculator.fragments.ProgrammerFragment o-- com.annushkaproject.programmerscalculator.model.int_size_enum : bytelengthenum
  com.annushkaproject.programmerscalculator.fragments.ProgrammerFragment o-- com.annushkaproject.programmerscalculator.model.ProgrammerCalcModel : calcModel
  com.annushkaproject.programmerscalculator.fragments.StandardFragment -up-|> android.support.v4.app.Fragment
  com.annushkaproject.programmerscalculator.fragments.StandardFragment o-- com.annushkaproject.programmerscalculator.model.CalculationModel : calcModel
  com.annushkaproject.programmerscalculator.fragments.ThemesFragment -up-|> android.support.v4.app.Fragment
  com.annushkaproject.programmerscalculator.fragments.c_handle_decimal_spinboks .up.|> android.widget.AdapterView.OnItemSelectedListener
  com.annushkaproject.programmerscalculator.fragments.c_handle_decimal_spinboks -up-|> android.app.Activity
  com.annushkaproject.programmerscalculator.fragments.langs_fragment -up-|> android.support.v4.app.Fragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
